[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/main/ui/candy-button/c3-blank-pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/main/ui/candy-button/c3-blank.png" type="Texture" id=2]
[ext_resource path="res://src/main/ui/candy-button/gradient-none.tres" type="Gradient" id=3]
[ext_resource path="res://src/main/editor/creature/ColorPickerPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/utils/DeconflictedAudioStreamPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/main/ui/candy-button/c3-focused.png" type="Texture" id=6]
[ext_resource path="res://assets/main/ui/button-click.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/main/ui/button-hover.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/main/ui/candy-button/c3-shine.png" type="Texture" id=9]
[ext_resource path="res://src/main/editor/creature/creature-color-button.gd" type="Script" id=10]
[ext_resource path="res://assets/main/editor/creature/icon-color.png" type="Texture" id=11]
[ext_resource path="res://src/main/ui/candy-button/gradient-map.shader" type="Shader" id=12]

[sub_resource type="GradientTexture2D" id=9]
resource_local_to_scene = true
gradient = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 12 )
shader_param/mix_amount = 1.0
shader_param/gradient = SubResource( 9 )

[node name="CreatureColorButton" type="TextureButton" groups=["color_buttons"]]
material = SubResource( 8 )
margin_left = 235.173
margin_top = 84.7441
margin_right = 315.173
margin_bottom = 148.744
rect_min_size = Vector2( 80, 64 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 6 )
expand = true
script = ExtResource( 10 )

[node name="Icon" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -32.0
margin_right = 40.0
margin_bottom = 32.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 11 )
expand = true

[node name="Shine" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.831373 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
bus = "Sound Bus"

[node name="HoverSound" parent="." instance=ExtResource( 5 )]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -12.0

[node name="Popup" parent="." instance=ExtResource( 4 )]
margin_right = 236.0
margin_bottom = 406.0

[connection signal="color_changed" from="Popup" to="." method="_on_Popup_color_changed"]
